<resources>
    <string name="app_name">LoadApp-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download">Download</string>
    <string name="loading">We are loading</string>
    <string name="first_file">Glide-Image Loading Library by BumpTech</string>
    <string name="second_file">LoadApp-Current repository by Udacity</string>
    <string name="third_file">Retrofit-Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="no_selection">Please select the file to download</string>

    <string name="loading_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="loading_notification_channel_name" translatable="false">Loading app channel</string>

    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>

    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
