<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/details_scene">

    <TextView
        android:id="@+id/file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        style="@style/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"/>

    <TextView
        android:id="@+id/file_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/file_name"
        style="@style/subTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_title"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"/>

    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="@style/Title"
        app:layout_constraintTop_toBottomOf="@id/file_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"/>

    <TextView
        android:id="@+id/status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/status"
        style="@style/subTitle"
        app:layout_constraintTop_toBottomOf="@id/file_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_title"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/ok"
        android:padding="@dimen/padding"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>